# AI_solo_coder_task_A_141

./: package-lock.json  package.json
backend/: CMakeLists.txt
backend/config/: dynamics.json
backend/include/: clickhouse_client.h  sensitivity_analyzer.h  simulation_engine.h
backend/src/: clickhouse_client.cpp  main.cpp  sensitivity_analyzer.cpp  simulation_engine.cpp
scripts/: init_clickhouse.sql  simulator.py
src/: App.tsx
src/components/Didongyi3D/: DidongyiModel.tsx
src/components/Layout/: AppShell.tsx  Sidebar.tsx
src/lib/: api.ts
src/pages/: Sensitivity.tsx  Simulation.tsx
src/types/: index.ts
